--- a/package.json
+++ b/package.json
@@ -1,12 +1,33 @@
 {
   "name": "weather_app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "- Initial readme for weather app - The readme will be modified later on the feature branch after completion of app. - A detail readme would be added later.",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch",
+    "start": "webpack-cli serve --mode development"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alaska01/weatherApp.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Alaska01/weatherApp/issues"
+  },
+  "homepage": "https://github.com/Alaska01/weatherApp#readme",
+  "devDependencies": {
+    "css-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
+  }
 }
